--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -68,8 +68,7 @@ am__objects_1 = libyog_bdw_la-arg.lo libyog_bdw_la-array.lo \
 	libyog_bdw_la-parser.lo libyog_bdw_la-regexp.lo \
 	libyog_bdw_la-stacktrace.lo libyog_bdw_la-string.lo \
 	libyog_bdw_la-table.lo libyog_bdw_la-thread.lo \
-	libyog_bdw_la-token.lo libyog_bdw_la-value.lo \
-	libyog_bdw_la-vm.lo
+	libyog_bdw_la-value.lo libyog_bdw_la-vm.lo
 am_libyog_bdw_la_OBJECTS = $(am__objects_1)
 libyog_bdw_la_OBJECTS = $(am_libyog_bdw_la_OBJECTS)
 libyog_bdw_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
@@ -93,8 +92,7 @@ am__objects_2 = libyog_copying_la-arg.lo libyog_copying_la-array.lo \
 	libyog_copying_la-parser.lo libyog_copying_la-regexp.lo \
 	libyog_copying_la-stacktrace.lo libyog_copying_la-string.lo \
 	libyog_copying_la-table.lo libyog_copying_la-thread.lo \
-	libyog_copying_la-token.lo libyog_copying_la-value.lo \
-	libyog_copying_la-vm.lo
+	libyog_copying_la-value.lo libyog_copying_la-vm.lo
 am_libyog_copying_la_OBJECTS = $(am__objects_2)
 libyog_copying_la_OBJECTS = $(am_libyog_copying_la_OBJECTS)
 libyog_copying_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
@@ -134,7 +132,6 @@ am__objects_3 = libyog_mark_sweep_compact_la-arg.lo \
 	libyog_mark_sweep_compact_la-string.lo \
 	libyog_mark_sweep_compact_la-table.lo \
 	libyog_mark_sweep_compact_la-thread.lo \
-	libyog_mark_sweep_compact_la-token.lo \
 	libyog_mark_sweep_compact_la-value.lo \
 	libyog_mark_sweep_compact_la-vm.lo
 am_libyog_mark_sweep_compact_la_OBJECTS = $(am__objects_3)
@@ -164,8 +161,8 @@ am__objects_4 = libyog_mark_sweep_la-arg.lo \
 	libyog_mark_sweep_la-regexp.lo \
 	libyog_mark_sweep_la-stacktrace.lo \
 	libyog_mark_sweep_la-string.lo libyog_mark_sweep_la-table.lo \
-	libyog_mark_sweep_la-thread.lo libyog_mark_sweep_la-token.lo \
-	libyog_mark_sweep_la-value.lo libyog_mark_sweep_la-vm.lo
+	libyog_mark_sweep_la-thread.lo libyog_mark_sweep_la-value.lo \
+	libyog_mark_sweep_la-vm.lo
 am_libyog_mark_sweep_la_OBJECTS = $(am__objects_4)
 libyog_mark_sweep_la_OBJECTS = $(am_libyog_mark_sweep_la_OBJECTS)
 libyog_mark_sweep_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
@@ -347,7 +344,6 @@ COMMON_SOURCES = arg.c \
 	string.c \
 	table.c \
 	thread.c \
-	token.c \
 	value.c \
 	vm.c
 
@@ -473,7 +469,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_bdw_la-string.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_bdw_la-table.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_bdw_la-thread.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_bdw_la-token.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_bdw_la-value.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_bdw_la-vm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_copying_la-arg.Plo@am__quote@
@@ -508,7 +503,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_copying_la-string.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_copying_la-table.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_copying_la-thread.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_copying_la-token.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_copying_la-value.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_copying_la-vm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_compact_la-arg.Plo@am__quote@
@@ -543,7 +537,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_compact_la-string.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_compact_la-table.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_compact_la-thread.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_compact_la-token.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_compact_la-value.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_compact_la-vm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_la-arg.Plo@am__quote@
@@ -578,7 +571,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_la-string.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_la-table.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_la-thread.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_la-token.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_la-value.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_mark_sweep_la-vm.Plo@am__quote@
 
@@ -827,13 +819,6 @@ libyog_bdw_la-thread.lo: thread.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_bdw_la_CFLAGS) $(CFLAGS) -c -o libyog_bdw_la-thread.lo `test -f 'thread.c' || echo '$(srcdir)/'`thread.c
 
-libyog_bdw_la-token.lo: token.c
-@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_bdw_la_CFLAGS) $(CFLAGS) -MT libyog_bdw_la-token.lo -MD -MP -MF $(DEPDIR)/libyog_bdw_la-token.Tpo -c -o libyog_bdw_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_bdw_la-token.Tpo $(DEPDIR)/libyog_bdw_la-token.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='token.c' object='libyog_bdw_la-token.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_bdw_la_CFLAGS) $(CFLAGS) -c -o libyog_bdw_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
-
 libyog_bdw_la-value.lo: value.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_bdw_la_CFLAGS) $(CFLAGS) -MT libyog_bdw_la-value.lo -MD -MP -MF $(DEPDIR)/libyog_bdw_la-value.Tpo -c -o libyog_bdw_la-value.lo `test -f 'value.c' || echo '$(srcdir)/'`value.c
 @am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_bdw_la-value.Tpo $(DEPDIR)/libyog_bdw_la-value.Plo
@@ -1071,13 +1056,6 @@ libyog_copying_la-thread.lo: thread.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='thread.c' object='libyog_copying_la-thread.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_copying_la_CFLAGS) $(CFLAGS) -c -o libyog_copying_la-thread.lo `test -f 'thread.c' || echo '$(srcdir)/'`thread.c
-
-libyog_copying_la-token.lo: token.c
-@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_copying_la_CFLAGS) $(CFLAGS) -MT libyog_copying_la-token.lo -MD -MP -MF $(DEPDIR)/libyog_copying_la-token.Tpo -c -o libyog_copying_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_copying_la-token.Tpo $(DEPDIR)/libyog_copying_la-token.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='token.c' object='libyog_copying_la-token.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_copying_la_CFLAGS) $(CFLAGS) -c -o libyog_copying_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
 
 libyog_copying_la-value.lo: value.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_copying_la_CFLAGS) $(CFLAGS) -MT libyog_copying_la-value.lo -MD -MP -MF $(DEPDIR)/libyog_copying_la-value.Tpo -c -o libyog_copying_la-value.lo `test -f 'value.c' || echo '$(srcdir)/'`value.c
@@ -1317,13 +1295,6 @@ libyog_mark_sweep_compact_la-thread.lo: thread.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_compact_la_CFLAGS) $(CFLAGS) -c -o libyog_mark_sweep_compact_la-thread.lo `test -f 'thread.c' || echo '$(srcdir)/'`thread.c
 
-libyog_mark_sweep_compact_la-token.lo: token.c
-@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_compact_la_CFLAGS) $(CFLAGS) -MT libyog_mark_sweep_compact_la-token.lo -MD -MP -MF $(DEPDIR)/libyog_mark_sweep_compact_la-token.Tpo -c -o libyog_mark_sweep_compact_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_mark_sweep_compact_la-token.Tpo $(DEPDIR)/libyog_mark_sweep_compact_la-token.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='token.c' object='libyog_mark_sweep_compact_la-token.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_compact_la_CFLAGS) $(CFLAGS) -c -o libyog_mark_sweep_compact_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
-
 libyog_mark_sweep_compact_la-value.lo: value.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_compact_la_CFLAGS) $(CFLAGS) -MT libyog_mark_sweep_compact_la-value.lo -MD -MP -MF $(DEPDIR)/libyog_mark_sweep_compact_la-value.Tpo -c -o libyog_mark_sweep_compact_la-value.lo `test -f 'value.c' || echo '$(srcdir)/'`value.c
 @am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_mark_sweep_compact_la-value.Tpo $(DEPDIR)/libyog_mark_sweep_compact_la-value.Plo
@@ -1561,13 +1532,6 @@ libyog_mark_sweep_la-thread.lo: thread.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='thread.c' object='libyog_mark_sweep_la-thread.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_la_CFLAGS) $(CFLAGS) -c -o libyog_mark_sweep_la-thread.lo `test -f 'thread.c' || echo '$(srcdir)/'`thread.c
-
-libyog_mark_sweep_la-token.lo: token.c
-@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_la_CFLAGS) $(CFLAGS) -MT libyog_mark_sweep_la-token.lo -MD -MP -MF $(DEPDIR)/libyog_mark_sweep_la-token.Tpo -c -o libyog_mark_sweep_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_mark_sweep_la-token.Tpo $(DEPDIR)/libyog_mark_sweep_la-token.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='token.c' object='libyog_mark_sweep_la-token.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_la_CFLAGS) $(CFLAGS) -c -o libyog_mark_sweep_la-token.lo `test -f 'token.c' || echo '$(srcdir)/'`token.c
 
 libyog_mark_sweep_la-value.lo: value.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_mark_sweep_la_CFLAGS) $(CFLAGS) -MT libyog_mark_sweep_la-value.lo -MD -MP -MF $(DEPDIR)/libyog_mark_sweep_la-value.Tpo -c -o libyog_mark_sweep_la-value.lo `test -f 'value.c' || echo '$(srcdir)/'`value.c
